<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/hint_user_field"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/hint_user_password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_login"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_login"
        android:layout_marginHorizontal="130sp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/main_btn"
        app:layout_constraintBottom_toTopOf="@+id/user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/main_btn"
        android:text="Task Show"
        android:textAlignment="center"
        android:textColor="@color/textColorHint"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignRight="@id/logo"
        android:backgroundTint="@color/textColorCherry"
        android:text="@string/start"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/HidenFastStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn"
        app:layout_constraintEnd_toEndOf="@+id/main_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_btn"
        app:layout_constraintTop_toTopOf="@+id/main_btn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>